# color_adjust

./: CMakeLists.txt  imgcat.sh
test/: test.cc
test_images/: imglist.txt
